feat: search pets by species. fix: edit pet photo